<resources>
    <string name="app_name">FoodStar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="text_add_item">Tambah</string>
    <string name="text_discount_40">Diskon 40% OFF</string>
    <string name="text_discount_40_promo">Promo diskon hanya berlaku tanggal 10 – 24 April 2024</string>
    <string name="text_user_name">Hai Raihan</string>
    <string name="text_welcome_app">Selamat Datang di Food Star</string>
    <string name="text_category_title">Kategori</string>
    <string name="text_catalog_title">List Menu</string>
    <string name="rupiah">%s Rupiah</string>
    <string name="add_to_cart">Tambah ke Keranjang - %s</string>
    <string name="location_title_default">Lokasi</string>
    <string name="address_location">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="add_to_cart_text">Tambah</string>
    <string name="symbol_minus">-</string>
    <string name="number_count">1</string>
    <string name="symbol_plus">+</string>
    <string name="text_catalog_name">Nasi Goreng</string>
    <string name="text_price_number">18000.0</string>
    <string name="text_food_desc">Nasi Goreng Spesial dengan rasa yang enak dan bergizi</string>
    <string name="text_cart_is_empty">Keranjang anda kosong</string>
    <string name="total_quantity">%s</string>
    <string name="text_add_to_cart_success">Sukses menambahkan ke keranjang</string>
    <string name="add_to_cart_failed">Gagal menambahkan ke keranjang</string>
    <string name="loading">Loading</string>
    <string name="success_dialog_title">Transaksi Berhasil</string>
    <string name="success_dialog_message">Silakan tunggu pesanan anda\n</string>
    <string name="text_input_menu_notes">Masukkan catatan disini</string>
    <string name="text_transaction_confirmation">Konfirmasi Transaksi</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_cart">Keranjang</string>
    <string name="text_total_price_title">Total Harga</string>
    <string name="text_checkout_title">Checkout</string>
    <string name="text_method_delivery">Metode Delivery</string>
    <string name="text_pickup">Pick up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_wallet">FostPay</string>
    <string name="text_cash">Tunai</string>
    <string name="text_payment">Metode Pembayaran</string>
    <string name="text_total_shop">Total Belanja</string>
    <string name="text_edit">Edit</string>
    <string name="text_username_title">Username</string>
    <string name="text_username">Raihan Rafi</string>
    <string name="text_email_title">Email</string>
    <string name="text_email">raihanrrizqullah@gmail.com</string>
    <string name="number_phone">No Telepon</string>
    <string name="text_phone_number">0895397833055</string>
    <string name="text_empty_cart">Keranjang anda kosong</string>
    <string name="text_checkout_error">Checkout gagal</string>
    <string name="text_password_title">Password</string>
    <string name="text_confirm_password_title">Confirm Password</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Login</string>
    <string name="text_not_registered_yet_register_here">Belum daftar akun ? Daftar disini</string>
    <string name="text_already_have_an_account_click_here">Sudah punya akun ? Login disini</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_4_char">Password cannot less than 4 character</string>
    <string name="text_register">Daftar</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login disini</string>
    <string name="text_highlight_register">Daftar disini</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_save_title">Simpan</string>
    <string name="text_change_pass">Ganti Password</string>
    <string name="text_hello">Hallo</string>
    <string name="text_username_login">Hi %1$s</string>

</resources>