<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.cart.CartFragment">
    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_bottom_corners"
        android:backgroundTint="@color/md_theme_light_primary">

        <TextView
            android:id="@+id/tv_title_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_cart"
            android:textSize="20sp"
            android:fontFamily="@font/font_outfit_regular"
            android:textColor="@color/md_theme_light_onSecondary"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom_foot"
        app:layout_constraintTop_toBottomOf="@+id/ll_action_bar"
        tools:listitem="@layout/item_cart_menu"/>

    <include
        android:id="@+id/layout_state"
        layout="@layout/layout_content_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom_foot"
        app:layout_constraintTop_toBottomOf="parent"/>
    <LinearLayout
        android:id="@+id/ll_bottom_foot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_outlineVariant"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="594dp">

        <LinearLayout
            android:id="@+id/ll_container_total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_total_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_total_price_title"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_total_price_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="200000"
                android:layout_marginTop="8dp"
                android:textSize="24sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_checkout_menu"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/md_theme_light_primary"
            android:text="@string/text_checkout_title"
            android:textColor="@android:color/white"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>