<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="12dp"
            android:background="@color/md_theme_dark_onPrimaryContainer">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_catalog_images"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_onPrimary"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_banner"
                app:shapeAppearanceOverlay="@drawable/rounded_all_corners" />

            <LinearLayout
                android:layout_width="271dp"
                android:layout_height="172dp"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:id="@+id/tv_catalog_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Nasi Goreng Spesial Lombok Ijo" />

                <TextView
                    android:id="@+id/tv_catalog_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="80.000,0"
                    android:textSize="16sp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_input_notes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_catalog_images"
                    app:layout_constraintTop_toBottomOf="@id/tv_catalog_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_input_menu_notes"
                        android:padding="8dp"
                        android:textColor="@color/md_theme_light_scrim"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="278dp"
                    android:layout_height="60dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_delete_cart"
                        android:layout_width="42dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="120dp"
                        android:backgroundTint="@color/md_theme_light_error"
                        android:padding="12dp"
                        android:textColor="@android:color/white"
                        app:cornerRadius="12dp"
                        app:icon="@drawable/ic_garbage" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ic_minus"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="32dp"
                        android:layout_height="42dp"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/symbol_minus"
                        android:textColor="@color/md_theme_light_scrim"
                        android:textSize="16sp"
                        app:backgroundTint="@android:color/transparent"
                        app:backgroundTintMode="multiply"
                        app:cornerRadius="8dp"
                        app:rippleColor="@color/md_theme_light_onSecondary"
                        app:strokeColor="@color/md_theme_light_primary"
                        app:strokeWidth="2dp" />

                    <TextView
                        android:id="@+id/tv_quantity_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/number_count"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ic_add"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="32dp"
                        android:layout_height="42dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:padding="4dp"
                        android:layout_marginEnd="28dp"
                        android:text="@string/symbol_plus"
                        android:textColor="@color/md_theme_light_scrim"
                        android:textSize="16sp"
                        app:backgroundTint="@android:color/transparent"
                        app:backgroundTintMode="multiply"
                        app:cornerRadius="8dp"
                        app:rippleColor="@color/md_theme_light_onSecondary"
                        app:strokeColor="@color/md_theme_light_primary"
                        app:strokeWidth="2dp" />



                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>